Updated the Procfile

--- a/vehicleregistration/Procfile
+++ b/vehicleregistration/Procfile
@@ -1,1 +1,8 @@
-waitress-serve --port=8080 vehicleregistration.wsgi:application
+web: waitress-serve \
+    --listen "*:$PORT" \
+    --trusted-proxy '*' \
+    --trusted-proxy-headers 'x-forwarded-for x-forwarded-proto x-forwarded-port' \
+    --log-untrusted-proxy-headers \
+    --clear-untrusted-proxy-headers \
+    --threads ${WEB_CONCURRENCY:-4} \
+    myapp:vehicleregistration
